Fix button scaling on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -46,6 +46,9 @@
         padding-bottom: 100px;
         height: 80vh;
     }
+    .header-area .button {
+        font-size:15px;
+    }
     .page-title h2,
     .header-text h2 {
         font-size: 50px;
